<resources>
    <string name="med_rem">MedRem</string>
    <string name="medication_reminder">Medication Reminder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_medication_list">Medications</string>
    <string name="title_medication_detail">Medication Detail</string>
    <string name="img_description">Medication Picture</string>

    <string name="cancel">Cancel</string>
    <string name="signin">SignIn</string>
    <string name="username">Name</string>
    <string name="password">Password</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="title_activity_medication_add">New Medication</string>
    <string name="new_medication">Add Medication</string>
    <string name="no_alarm_set">Tap to add alarm</string>
    <string name="menu_add_alarm">Add Alarm</string>
    <string name="menu_add_meds">Add Medication</string>
    <string name="detail_med_name">Medication Name</string>
    <string name="tap_to_enter">Tap to enter</string>
    <string name="add">Add</string>
    <string name="tap_to_add">Tap to add alarm</string>
    <string name="sync_watch">Sync watch</string>
    <string name="connect_to_watch">Connect to watch</string>
    <string name="connect">Connect</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="send_success">Sending medications to wach was successfull</string>
</resources>
