<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="be.ehb.medicationreminder.UI.StartActivity"
    android:id="@+id/start_layout">

    <TextView android:text="@string/connect_to_watch" android:layout_width="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_height="wrap_content"
        android:id="@+id/txtConnect"
        android:layout_marginTop="99dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/medication_reminder"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect"
        android:id="@+id/button"
        android:layout_below="@+id/txtConnect"
        android:layout_marginTop="20dp"
        android:layout_alignEnd="@+id/txtConnect"
        android:layout_alignStart="@+id/txtConnect"
        android:onClick="onConnectClick"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Test"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignEnd="@+id/button"
        android:layout_alignStart="@+id/button"
        android:onClick="onTestClick"/>


</RelativeLayout>
